--- a/conf/Makefile.in
+++ b/conf/Makefile.in
@@ -61,9 +61,12 @@ CC = @CC@
 CHASEN = @CHASEN@
 EXEEXT = @EXEEXT@
 FILE_MMAGIC = @FILE_MMAGIC@
+GROFF = @GROFF@
+INFO = @INFO@
 KAKASI = @KAKASI@
 LEX = @LEX@
 LN_S = @LN_S@
+LYNX = @LYNX@
 MAKEINFO = @MAKEINFO@
 NKF = @NKF@
 OBJEXT = @OBJEXT@
@@ -75,7 +78,11 @@ PACKAGE = @PACKAGE@
 PERL = @PERL@
 SCORING = @SCORING@
 TEST_MODE = @TEST_MODE@
+TKNAMAZU = @TKNAMAZU@
+TK_LANGUAGE = @TK_LANGUAGE@
 VERSION = @VERSION@
+WISH = @WISH@
+ZCAT = @ZCAT@
 
 EXTRA_DIST = namazu.conf-dist
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
